--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-core": "^6.21.0",
+    "babel-eslint": "^7.1.1",
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "eslint-config-airbnb": "^14.0.0",
+    "eslint-plugin-react": "^6.9.0",
     "react-hot-loader": "^1.3.1",
     "webpack": "^1.14.0",
     "webpack-dev-middleware": "^1.9.0",
